welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:18: error: Int(1) does not take parameters
  if (diag<=getMondeLargeur-1()){
                             ^